Bug 1074886 - URLSearchParams.get() should return null (not empty string) when not find pair. r=bzbarsky